dynamically_typed_tests/invalid/variables/became_valid/basicTypeErr06.wacc
# type mismatch: bool <- string

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  b = "true"
end
